--- a/css/add.css
+++ b/css/add.css
@@ -2,7 +2,8 @@ body{
     display: flex;
     margin: 0;
     height: 100vh;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;    
     position: relative;
     z-index: 0;
@@ -113,3 +114,9 @@ h2 {
     margin-bottom: 19px;   
 }
 
+.redirect{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    column-gap: 25px;
+}
